# emoji-font-generator

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml
cmd/: add_emojis_to_dictionary.py  add_ligatures.py  add_translations.py  combine.py  create_combined_svgs.py  create_font.py  create_svgs.py  create_with_ifont.js  dictionary.py  download.py  download_all_emoji_svgs_from_twemoji.py  font_to_svgs.py  main.py  resave.py  sheet_to_dictionary.py  vanilla.py  w_fontbuilder.py  w_fonttools.py
config/: ai_output.json  ai_output_w_translations.json  config.json  dict.csv  dict.json  meanings.json  prompt_input.json  russian.json  system.json  usable_emojis.json
input/config/: dictionary.json
input/llm/: prompt_example.md  prompt_for_1_word.md
input/raw/: sheet.json
output/: Nu_lirbantu_2025_04_14_emoji.sfd
src/: emoji_to_svg.py  project.py
src/config/: config.py
src/emoji_font_generator/: combine.py  download.py  emoji_to_svg.py  helpers.py  io.py  ligature.py  project.py  russian.py  word.py
src/emoji_font_generator/config/: config.py
src/emoji_font_generator/input/: config.py  io.py
src/emoji_font_generator/llm/: llm.py
src/lirbantu/: combine.py  emoji_to_svg.py  helpers.py  project.py
src/lirbantu/config/: config.py
tests/: codepoint.py  combine.py  test_codepoint.py  test_combine.py  test_config.py  test_russian.py  test_word.py
