[project]
name = "lirbantu"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "brotli>=1.2.0",
    "fonttools>=4.61.1",
    "requests>=2.32.5",
]

#[build-system]
#requires = ["setuptools>=61.0"]
#build-backend = "setuptools.build_meta"
#
#[tool.setuptools.packages.find]
#where = ["."]  # Look for packages in the current directory


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lirbantu"]
