[project]
name = "emoji-font-generator"
version = "0.1.0"
description = "automated creation of hieroglyphic script using emojis or custom svgs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "brotli>=1.2.0",
    "dataclasses-json>=0.6.7",
    "fonttools>=4.61.1",
    "picosvg>=0.22.3",
    "pydantic>=2.12.5",
    "pymorphy2>=0.9.1",
    "pymorphy2-dicts>=2.4.393442.3710985",
    "pymorphy2-dicts-ru>=2.4.417127.4579844",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
    "setuptools<81",
    "ziafont>=0.11",
]

#[build-system]
#requires = ["setuptools>=61.0"]
#build-backend = "setuptools.build_meta"
#
#[tool.setuptools.packages.find]
#where = ["."]  # Look for packages in the current directory


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/emoji_font_generator"]
